--- a/dashboard.html
+++ b/dashboard.html
@@ -35,6 +35,11 @@
     .personalBests {
       color: white;
     }
+    .prList {
+      list-style-type: none;
+      background-color: rgba(0,0,0,0.4);
+    }
+
   </style>
 </head>
 <body ng-app="activ8">
@@ -70,32 +75,32 @@
     </div>
     </section>
     <section class="personalBests">
-      <ul class="prList1 col-xs-6">
-        <li>Power Clean: {{user.pr.powerclean}}</li>
-        <li>Squat Clean: {{user.pr.squatclean}}</li>
-        <li>Hang Clean: {{user.pr.hangclean}}</li>
-        <li>Hang Squat Clean: {{user.pr.hangsquatclean}}</li>
-        <li>Split Jerk: {{user.pr.splitjerk}}</li>
-        <li>Push Jerk: {{user.pr.pushjerk}}</li>
-        <li>Clean & Jerk: {{user.pr.cleanjerk}}</li>
-        <li>Power Snatch: {{user.pr.powersnatch}}</li>
-        <li>Squat Snatch: {{user.pr.squatsnatch}}</li>
-        <li>Hang Snatch: {{user.pr.hangsnatch}}</li>
-        <li>Hang Squat Snatch: {{user.pr.hangsquatsnatch}}</li>
+      <ul class="prList prList1 col-xs-6">
+        <li>Power Clean: {{user.pr.powerclean}} 500lbs</li>
+        <li>Squat Clean: {{user.pr.squatclean}} 500lbs</li>
+        <li>Hang Clean: {{user.pr.hangclean}} 500lbs</li>
+        <li>Hang Squat Clean: {{user.pr.hangsquatclean}} 500lbs</li>
+        <li>Split Jerk: {{user.pr.splitjerk}} 500lbs</li>
+        <li>Push Jerk: {{user.pr.pushjerk}} 500lbs</li>
+        <li>Clean & Jerk: {{user.pr.cleanjerk}} 500lbs</li>
+        <li>Power Snatch: {{user.pr.powersnatch}} 500lbs</li>
+        <li>Squat Snatch: {{user.pr.squatsnatch}} 500lbs</li>
+        <li>Hang Snatch: {{user.pr.hangsnatch}} 500lbs</li>
+        <li>Hang Squat Snatch: {{user.pr.hangsquatsnatch}} 500lbs</li>
 
       </ul>
-      <ul class="prList2 col-xs-6">
-        <li>Deadlift: {{user.pr.deadlift}}</li>
-        <li>Sumo Deadlift: {{user.pr.sumodeadlift}}</li>
-        <li>Squat: {{user.pr.squat}}</li>
-        <li>Overhead Squat: {{user.pr.ohsquat}}</li>
-        <li>Front Squat: {{user.pr.frontsquat}}</li>
-        <li>Fran: {{user.pr.fran}}</li>
-        <li>Annie: {{user.pr.annie}}</li>
-        <li>Filthy Fifty: {{user.pr.filthy}}</li>
-        <li>Nicole: {{user.pr.nicole}}</li>
-        <li>Murph: {{user.pr.murph}}</li>
-        <li>Open 14.5: {{user.pr.open14-5}}</li>
+      <ul class="prList prList2 col-xs-6">
+        <li>Deadlift: {{user.pr.deadlift}} 500lbs</li>
+        <li>Sumo Deadlift: {{user.pr.sumodeadlift}} 500lbs</li>
+        <li>Squat: {{user.pr.squat}} 500lbs</li>
+        <li>Overhead Squat: {{user.pr.ohsquat}} 500lbs</li>
+        <li>Front Squat: {{user.pr.frontsquat}} 500lbs</li>
+        <li>Fran: {{user.pr.fran}} 3:45</li>
+        <li>Annie: {{user.pr.annie}} 18:00</li>
+        <li>Filthy Fifty: {{user.pr.filthy}} 30:00</li>
+        <li>Nicole: {{user.pr.nicole}} 22:00</li>
+        <li>Murph: {{user.pr.murph}} 45:00</li>
+        <li>Open 14.5: {{user.pr.open14-5}} 6:00</li>
       </ul>
     </section>
 
